--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
+
 .App{
-  max-width: 600px;
+  max-width: 800px; 
   margin: 0 auto;
+  align-items: center;
 
 
 }
 .App footer{
-  font-size: 11px;
+  font-size: 15px;
   margin: 10px 0;
+  justify-content: center;
+  display: flex;
   
+  
+}
+.container{
+  
+  margin: 0 auto;
 }
