--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,22 +1,29 @@
+
 .Weather{
     border: 1px solid #dadde1;
     font-family: arial,sans-serif;
     color: rgb(135,135, 135);
-    margin: 30px;
+    margin: 0 auto;
     border-radius: 4px;
     max-width: 600px;
+    margin-top: 30px;
+    background-color: #F7F7F7;
+    padding: 5px;
+    
     
 }
 .Weather form{
-    margin-bottom: 20px;
+  
+    margin: 10px 5px 20px;
 }
+
 .Weather h1{
-    color: #878787;
+    color: #30475E;
     
     display: block;
     
-    font-size: 24px;
-    font-weight: 100;
+    font-size: 30px;
+    font-weight: 300;
     height: 28px;
     line-height: 28.8px;
 }
